# reticle-releases

./: LICENSE  README.md  version.json
.github/workflows/: github-releases-to-discord.yml  releases to discord.yml
Reticle/: README.md  index.html  package-lock.json  package.json  vite.config.ts
Reticle/DOCS/: Requests.md  VIDEOMODE.md
Reticle/src/: App.vue  i18n.ts  main.ts
Reticle/src-tauri/: 2  Cargo.toml  build.rs  license.txt  tauri.conf.json
Reticle/src-tauri/.cargo/: config.toml
Reticle/src-tauri/capabilities/: default.json  desktop.json
Reticle/src-tauri/icons/: icon.icns
Reticle/src-tauri/src/: lib.rs  main.rs
Reticle/src-tauri/src/audio/: mod.rs
Reticle/src-tauri/src/commands/: capture.rs  export.rs  mod.rs  ocr.rs  system.rs  video.rs  video_history.rs
Reticle/src-tauri/src/tracking/: mod.rs
Reticle/src-tauri/src/video/: editor.rs  export.rs  mod.rs  recorder.rs  webcam.rs
Reticle/src/components/: WelcomeScreen.vue
Reticle/src/components/Editor/: AnnotationTools.vue  AudioWaveform.vue  CaptureToolbar.vue  EditorCanvas.vue  EditorNavbar.vue  EditorProperties.vue  EmojiPicker.vue  EmojiStickerLayer.vue  ExportDialog.vue  FakeCursor.vue  KeyOverlay.vue  ShaderBackgroundLayer.vue  VideoControls.vue  VideoEditorCanvas.vue  VideoTimeline.vue  WindowControls.vue
Reticle/src/composables/: useCapture.ts  useMotionEngine.ts  useOverlay.ts  useRecordingTimer.ts  useShortcuts.ts  useVideoExport.ts
Reticle/src/locales/: de.json  en.json  es.json  it.json  pt-BR.json  ru.json
Reticle/src/stores/: __manual_test_videoHistory.ts  editor.ts  history.ts  notification.ts  settings.ts  video.ts  videoEditor.ts  videoHistory.ts  viewport.ts
Reticle/src/styles/: fonts.css  main.css
Reticle/src/types/: index.ts
Reticle/src/utils/: blob.ts  canvasEffects.ts  constants.ts  editorRender.ts  history.ts  image.ts  shaderBackground.ts  zoomCalculator.ts
Reticle/src/windows/: CaptureBar.vue  RecordOverlay.vue  RegionOverlay.vue
(+8 files in other folders)
