[package]
name = "reticle"
version = "1.1.6"
description = "Reticle is a precision screenshot tool for Windows"
authors = ["Reticle Inc."]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "reticle_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
dotenvy = "0.15"

[features]
default = ["ppocr"]
ppocr = ["dep:ocr-rs"]

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
xcap = "0.8.1"
arboard = "3.6.1"
image = "0.25.9"
chrono = "0.4.43"
rayon = "1.11"
fast_image_resize = { version = "6.0", features = ["image", "rayon"] }
dirs = "5"
anyhow = "1"
tauri-plugin-log = "2"
machine-uid = "0.5.4"
sha2 = "0.10.9"
hex = "0.4.3"
tauri-plugin-shell = "2"
windows-capture = "1.5.0"
rdev = "0.5.3"
flume = "0.12.0"
cpal = "0.15.2"
tokio = { version = "1.49.0", features = ["full"] }
nokhwa = { version = "0.10.10", features = ["input-msmf"] }
base64 = "0.22"
regex-lite = "0.1"
tauri-plugin-fs = "2"
pollster = "0.4"
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Graphics_Imaging",
    "Media_Ocr",
    "Storage_Streams",
] }
tauri-plugin-dialog = "2"
ocr-rs = { version = "2.0.2", optional = true }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
